# ChangeLog for dev-util/bzr
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.65 2008/10/19 14:46:04 maekke Exp $

  19 Oct 2008; Markus Meier <maekke@gentoo.org> bzr-1.6.1.ebuild:
  amd64/x86 stable, bug #241740

  18 Oct 2008; nixnut <nixnut@gentoo.org> bzr-1.6.1.ebuild:
  Stable on ppc wrt bug 241740

*bzr-1.8 (18 Oct 2008)

  18 Oct 2008; Peter Volkov <pva@gentoo.org> -bzr-1.8_rc1.ebuild,
  +bzr-1.8.ebuild:
  Version bump.

*bzr-1.8_rc1 (07 Oct 2008)

  07 Oct 2008; Peter Volkov <pva@gentoo.org> +files/bzr-1.8-no-pyrex.patch,
  +bzr-1.8_rc1.ebuild:
  Version bump.

*bzr-1.7.1 (02 Oct 2008)

  02 Oct 2008; Peter Volkov <pva@gentoo.org> -bzr-1.7.ebuild,
  +bzr-1.7.1.ebuild:
  Version bump.

*bzr-1.7 (24 Sep 2008)

  24 Sep 2008; Peter Volkov <pva@gentoo.org> -bzr-1.7_rc1.ebuild,
  +bzr-1.7.ebuild:
  Version bump.

*bzr-1.7_rc1 (15 Sep 2008)

  15 Sep 2008; Peter Volkov <pva@gentoo.org> -bzr-1.6.ebuild,
  +bzr-1.7_rc1.ebuild:
  Version bump. Restored ChangeLog, thank alip for IRC report. Remove
  unused.

*bzr-1.6.1 (07 Sep 2008)

  07 Sep 2008; Peter Volkov <pva@gentoo.org> +bzr-1.6.1.ebuild:
  Version bump.

*bzr-1.6 (25 Aug 2008)

  25 Aug 2008; Peter Volkov <pva@gentoo.org> -files/70bzr-gentoo.el,
  -files/bzr-0.16-fix-manpage-location.patch, -bzr-0.17.ebuild,
  -bzr-1.1.ebuild, -bzr-1.3.ebuild, -bzr-1.4.ebuild, -bzr-1.6_rc5.ebuild,
  +bzr-1.6.ebuild:
  Version bump, removed old.

  23 Aug 2008; Markus Meier <maekke@gentoo.org> bzr-1.5.ebuild:
  amd64/x86 stable, bug #235504

*bzr-1.6_rc5 (23 Aug 2008)

  23 Aug 2008; Peter Volkov <pva@gentoo.org> metadata.xml,
  +bzr-1.6_rc5.ebuild:
  Added release candidate, hardmasked, bug #233713, thank kiorky for report.
  Added myself to metadata.

*bzr-1.5 (22 May 2008)

  22 May 2008; Ali Polatel <hawking@gentoo.org> +bzr-1.5.ebuild:
  Version bump.

*bzr-1.4 (10 May 2008)

  10 May 2008; Ali Polatel <hawking@gentoo.org> +bzr-1.4.ebuild: