@@ -13,13 +13,14 @@ DIST bzr-1.8.tar.gz 3818860 RMD160 87194bbbe5cd585e48fcdbf6b63e202bcbf95b4a SHA1
 EBUILD bzr-1.5.ebuild 2944 RMD160 966f77d6cfdf534c1bcce0ae907680447f94f31b SHA1 5b22a868709e4955e44425636714492d7d4acb13 SHA256 b34686d7605f615431ec170edcc28cda7f43ccecb917f9c3fffbfc96d3b2f8f6
 EBUILD bzr-1.6.1.ebuild 2945 RMD160 fc07ab6435cd0e6a8f72b2f5af7b92a0b9e12513 SHA1 ea6a565f684fece9bd451c1f82d1d6d70f3dffba SHA256 ce441ea1bc75983d4964091c65580de71d7c1daf844cac5909c736ee08b772a4
 EBUILD bzr-1.7.1.ebuild 2945 RMD160 c3d4d072acb77cbf62dec66e77fd34aecb38bac4 SHA1 2ab42f8db46ab01cea4ecf4a0653c5d8dbabcac8 SHA256 186563d95692d7401d30bf6cfaabb7fb1cc86c56da59302894ba5e1b4778bad5
+EBUILD bzr-1.8-r1.ebuild 3025 RMD160 5eeb1472f2e7d5cc67f146314c05622ca65d0402 SHA1 603f1e579593208d7d2d05c1e9b3f326e113429d SHA256 992044ab9e9ea66f8c54325745682c5ae0b77ca119e77acedbd6efcd3d110e4e
 EBUILD bzr-1.8.ebuild 2942 RMD160 106ae6633401f5bfdb67e0c44c9a0350d3c0631f SHA1 02ad7ac36515c1b1713983c053e1e9e97447052c SHA256 1995cfd8325140e79daf8d5b1932fdee088910737446104763fe69cc68b6ad74
-MISC ChangeLog 10590 RMD160 eb67b77bf158e3e49e2ab3612e1292e0886e76cc SHA1 bf1029c96f1cd752b9547a253723483409488558 SHA256 542113808d69308888ea8a54c09e887cb8d78786f321a993a9b0315aca31dc4d
+MISC ChangeLog 10739 RMD160 44ecc9a0672d11290953596720041069cbd332fc SHA1 71655427377773c22f689af3713d5df82ef4b5ec SHA256 c256ff286b328a83b4a3230b40fdac1c68c985c0b24c96b89c56c9f7fe8add2f
 MISC metadata.xml 860 RMD160 98865988f16354ad7610236ea23edc1413944bf6 SHA1 b6aaf1352b5ecfec4ac3721bc6284d131ba45247 SHA256 71854455dc212e6bb7a361619da8278c06e6d4439a19cf5ec0b1082a994be972
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkj7SIUACgkQkKaRLQcq0GKZwwCgqF3UrZoWiqVwS64sIYMP2UMt
-Rx8An1I6QVGs0DLaFp5mgIKIz0MNqkbd
-=Hc7s
+iEYEARECAAYFAkj+DpkACgkQQU4yORhF8iCciACfVuXyAgTOJfTlLI/2qOtOA1aE
+G7MAoMusUSUalxlc01V2HIMRK5kfWSKp
+=MGsz
 -----END PGP SIGNATURE-----
