@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/bzr
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.65 2008/10/19 14:46:04 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.66 2008/10/21 17:17:04 hawking Exp $
+
+*bzr-1.8-r1 (21 Oct 2008)
+
+  21 Oct 2008; Ali Polatel <hawking@gentoo.org> +bzr-1.8-r1.ebuild:
+  Add doc use flag #243012. Add die to dodoc calls.
 
   19 Oct 2008; Markus Meier <maekke@gentoo.org> bzr-1.6.1.ebuild:
   amd64/x86 stable, bug #241740
